--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emailjs/browser": "^4.4.1",
     "antd": "^5.20.6",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "emailjs": "^4.0.3",
+    "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
