--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "emailjs": "^4.0.3",
+    "firebase": "^10.14.1",
     "framer-motion": "^11.9.0",
     "koifarmshopswp391": "file:",
     "react": "^18.3.1",
