--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.14.1",
     "framer-motion": "^11.9.0",
     "koifarmshopswp391": "file:",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
