--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@emailjs/browser": "^4.4.1",
     "antd": "^5.20.6",
     "aos": "^2.3.4",
