--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "recharts": "^2.13.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
